--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             $(document).ready(function() {
                 $("#owl-demo").owlCarousel({
                         items:1,
-                        nav:true,
+                        nav:false,
                         dots:false,
                         autoplay:true,
                         loop:true,
