--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
             <div class="item">
                 <div class="sliderImg">
-                    <img src="img/slider-img-1.jpg" alt="">
+                    <img src="https://newevolutiondesigns.com/images/freebies/city-wallpaper-6.jpg" alt="">
                 </div>
                 <div class="slider_text_wrapper">
                     <div class="slider_info">
