--- a/index.html
+++ b/index.html
@@ -414,7 +414,11 @@
             });
 
             AOS.init({
-                 easing: 'ease-in-out-sine'
+                 easing: 'ease-in-out-sine',
+                 disable: function () {
+                            var maxWidth = 1024;
+                            return window.innerWidth < maxWidth;
+                         }
             });
 
         </script>
