--- a/index.html
+++ b/index.html
@@ -208,35 +208,35 @@
                         <div class="product-item">
                             <a href=""><div class="icons browser"></div></a>
                              <div class="product-text">
-                                <h2>Branding & Identity</h2>
+                                <h2>Web & Graphic Design</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam harum deserunt, nemo optio perferendis animi quas iure hic.</p>
                             </div>
                         </div>
                         <div class="product-item">
                             <a href=""><div class="icons apps"></div></a>
                              <div class="product-text">
-                                <h2>Branding & Identity</h2>
+                                <h2>Mobile App Development</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam harum deserunt, nemo optio perferendis animi quas iure hic.</p>
                             </div>
                         </div>
                         <div class="product-item">
                             <a href=""><div class="icons animation"></div></a>
                              <div class="product-text">
-                                <h2>Branding & Identity</h2>
+                                <h2>Animations</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam harum deserunt, nemo optio perferendis animi quas iure hic.</p>
                             </div>
                         </div>
                         <div class="product-item">
                             <a href=""><div class="icons star"></div></a>
                              <div class="product-text">
-                                <h2>Branding & Identity</h2>
+                                <h2>ui/ux</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam harum deserunt, nemo optio perferendis animi quas iure hic.</p>
                             </div>
                         </div>
                         <div class="product-item">
                             <a href=""><div class="icons camera"></div></a>
                              <div class="product-text">
-                                <h2>Branding & Identity</h2>
+                                <h2>Photography</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam harum deserunt, nemo optio perferendis animi quas iure hic.</p>
                             </div>
                         </div>
